WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302756
[blocks-in-inline] Line box for block content does not get indented by intrusive float(s)
https://bugs.webkit.org/show_bug.cgi?id=302756
Summary
[blocks-in-inline] Line box for block content does not get indented by intrus...
alan
Reported
2025-11-18 18:52:17 PST
ssia
Attachments
[fast-cq]Patch
(2.12 KB, patch)
2025-11-18 19:01 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-18 19:01:56 PST
Created
attachment 477427
[details]
[fast-cq]Patch
EWS
Comment 2
2025-11-19 04:43:51 PST
Committed
303247@main
(f99e08ec32fc): <
https://commits.webkit.org/303247@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477427
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-11-19 04:44:12 PST
<
rdar://problem/165040368
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug