[blocks-in-inline] Line box for block content does not get indented by intrusive float(s) https://bugs.webkit.org/show_bug.cgi?id=302756

Reviewed by Antti Koivisto.

Let's use the line's original logical left rather than the float-adjusted value.

(If a block box is pushed over by a float, its position should reflect that. But because even single blocks are wrapped in anonymous blocks, the anonymous block itself is never shifted by floats-only its children are)

* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::build):

Canonical link: https://commits.webkit.org/303247@main